--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "author": "TMiguelT",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "bluebird": "^2.10.2",
     "capitalize": "^0.5.0",
     "cheerio": "^0.19.0",
     "lodash": "^3.10.1",
+    "puppeteer": "^24.31.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "request-promise": "^0.4.3",
     "trim": "0.0.1"
   },
